--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@kinde-oss/kinde-auth-nextjs": "^2.3.6",
+    "@tanstack/react-query": "^5.52.0",
+    "@tanstack/react-query-devtools": "^5.52.1",
+    "@tanstack/react-table": "^8.20.5",
+    "axios": "^1.7.4",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "use-context-selector": "^2.0.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.52.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
