--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@tanstack/react-query-devtools": "^5.52.1",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.4",
+    "chart.js": "^4.4.4",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
     "use-context-selector": "^2.0.0"
